--- a/GraphicsPostProcesses.vcxproj.filters
+++ b/GraphicsPostProcesses.vcxproj.filters
@@ -14,21 +14,30 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
     <Filter Include="Исходные файлы\GraphicsCore">
-      <UniqueIdentifier>{dea6b7ca-febb-4318-adb1-3d7635f1be9c}</UniqueIdentifier>
+      <UniqueIdentifier>{d88438e5-8c9d-47ec-84fe-125104d462fb}</UniqueIdentifier>
     </Filter>
     <Filter Include="Файлы заголовков\GraphicsCore">
-      <UniqueIdentifier>{7fce4f52-749d-4203-be30-2c1716be067f}</UniqueIdentifier>
+      <UniqueIdentifier>{231f587b-9f2c-42b5-b230-78ccd28d0e31}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GraphicsPostProcesses.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="GraphicsRendererDirectX12.cpp">
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphicsRendererDirecX12.cpp">
       <Filter>Исходные файлы\GraphicsCore</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GraphicsPostProcesses.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="GraphicsRendererDirectX12.h">
       <Filter>Файлы заголовков\GraphicsCore</Filter>
     </ClInclude>
