--- a/GraphicsPostProcesses.vcxproj.filters
+++ b/GraphicsPostProcesses.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="GraphicsRendererDirecX12.cpp">
       <Filter>Исходные файлы\GraphicsCore</Filter>
     </ClCompile>
+    <ClCompile Include="GraphicsCommonHandler.cpp">
+      <Filter>Исходные файлы\GraphicsCore</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphicsPostProcesses.h">
@@ -39,6 +42,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="GraphicsRendererDirectX12.h">
+      <Filter>Файлы заголовков\GraphicsCore</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphicsCommonHandler.h">
       <Filter>Файлы заголовков\GraphicsCore</Filter>
     </ClInclude>
   </ItemGroup>
