--- a/GraphicsPostProcesses.vcxproj
+++ b/GraphicsPostProcesses.vcxproj
@@ -145,13 +145,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GraphicsCommonHandler.cpp" />
+    <ClCompile Include="GraphicsHelper.cpp" />
     <ClCompile Include="GraphicsPostProcesses.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="GraphicsRendererDirecX12.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphicsCommonHandler.h" />
+    <ClInclude Include="GraphicsHelper.h" />
     <ClInclude Include="GraphicsPostProcesses.h" />
+    <ClInclude Include="Main.h" />
     <ClInclude Include="GraphicsRendererDirectX12.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
