Buffer Allocation refactoring

--- a/GraphicsPostProcesses.vcxproj
+++ b/GraphicsPostProcesses.vcxproj
@@ -144,17 +144,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GraphicsBufferAllocationPage.cpp" />
     <ClCompile Include="GraphicsCommonHandler.cpp" />
+    <ClCompile Include="GraphicsBufferAllocator.cpp" />
+    <ClCompile Include="GraphicsDescriptorAllocation.cpp" />
+    <ClCompile Include="GraphicsDescriptorAllocationPage.cpp" />
+    <ClCompile Include="GraphicsDescriptorAllocator.cpp" />
     <ClCompile Include="GraphicsHelper.cpp" />
     <ClCompile Include="GraphicsPostProcesses.cpp" />
+    <ClCompile Include="GraphicsResourceManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="GraphicsRendererDirecX12.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GraphicsBufferAllocationPage.h" />
     <ClInclude Include="GraphicsCommonHandler.h" />
+    <ClInclude Include="GraphicsBufferAllocator.h" />
+    <ClInclude Include="GraphicsDescriptorAllocation.h" />
+    <ClInclude Include="GraphicsDescriptorAllocationPage.h" />
+    <ClInclude Include="GraphicsDescriptorAllocator.h" />
     <ClInclude Include="GraphicsHelper.h" />
     <ClInclude Include="GraphicsPostProcesses.h" />
+    <ClInclude Include="GraphicsResourceManager.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="GraphicsRendererDirectX12.h" />
     <ClInclude Include="stdafx.h" />
