--- a/GraphicsPostProcesses.vcxproj
+++ b/GraphicsPostProcesses.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="DDSLoader.cpp" />
     <ClCompile Include="DescriptorAllocationPage.cpp" />
     <ClCompile Include="DescriptorAllocator.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="GraphicsHelper.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="DDSLoader.h" />
     <ClInclude Include="DescriptorAllocationPage.h" />
     <ClInclude Include="DescriptorAllocator.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="GraphicsHelper.h" />
