--- a/GraphicsPostProcesses.vcxproj
+++ b/GraphicsPostProcesses.vcxproj
@@ -145,6 +145,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="GraphicsSettings.cpp" />
+    <ClCompile Include="Octree.cpp" />
     <ClCompile Include="BufferAllocationPage.cpp" />
     <ClCompile Include="CommonHandler.cpp" />
     <ClCompile Include="BufferAllocator.cpp" />
@@ -158,6 +161,7 @@
     <ClCompile Include="GraphicsHelper.cpp" />
     <ClCompile Include="PostProcesses.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="TextureAllocationPage.cpp" />
     <ClCompile Include="TextureAllocator.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -165,6 +169,9 @@
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="GraphicsSettings.h" />
+    <ClInclude Include="Octree.h" />
     <ClInclude Include="BufferAllocationPage.h" />
     <ClInclude Include="CommonHandler.h" />
     <ClInclude Include="BufferAllocator.h" />
@@ -178,6 +185,7 @@
     <ClInclude Include="GraphicsHelper.h" />
     <ClInclude Include="PostProcesses.h" />
     <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="TextureAllocationPage.h" />
     <ClInclude Include="TextureAllocator.h" />
     <ClInclude Include="Main.h" />
