Add new entity Scene Manager

--- a/GraphicsPostProcesses.vcxproj
+++ b/GraphicsPostProcesses.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="PostProcesses.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="TextureAllocationPage.cpp" />
     <ClCompile Include="TextureAllocator.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="PostProcesses.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneManager.h" />
     <ClInclude Include="TextureAllocationPage.h" />
     <ClInclude Include="TextureAllocator.h" />
     <ClInclude Include="Main.h" />
